# AegisCareAI

./: .gitignore  README.md  requirements.txt
AIModels/: notes.txt
AegisCareAI_Embedded/: .gitignore  notes.txt  platformio.ini
AegisCareAI_Embedded/.platformio/: appstate.json
AegisCareAI_Embedded/include/: Animations.h  Communication.h  Config.h  Display.h  Input.h  Menu.h  Pages.h  PatientSync.h  Utilities.h
AegisCareAI_Embedded/src/: Animations.cpp  Communication.cpp  Display.cpp  Input.cpp  Menu.cpp  Pages.cpp  PatientSync.cpp  Utilities.cpp  main.cpp
DesktopApp/: CMakeLists.txt  README.md  notes.txt  requirements.txt  run-aegiscare.sh
DesktopApp/src/: main.cpp
DesktopApp/src/communication/: CommunicationLogger.cpp  CommunicationLogger.h
DesktopApp/src/core/: CameraProvider.h  CameraQualityEngine.cpp  CameraQualityEngine.h  CameraSourceManager.cpp  CameraSourceManager.h  CameraStreamManager.cpp  CameraStreamManager.h  CommunicationManager.cpp  CommunicationManager.h  DatabaseManager.cpp  DatabaseManager.h  DemoReportGenerator.cpp  DemoReportGenerator.h  ESP32CameraProvider.cpp  ESP32CameraProvider.h  LaptopCameraProvider.cpp  LaptopCameraProvider.h  LaptopCameraProvider.mm  VoiceAssistant.cpp  VoiceAssistant.h  WorkflowEngine.cpp  WorkflowEngine.h
DesktopApp/src/models/: Models.h
DesktopApp/src/protocol/: JsonLineProtocol.cpp  JsonLineProtocol.h
DesktopApp/src/resources/: Info.plist.in  resources.qrc
DesktopApp/src/resources/styles/: dark_theme.qss
DesktopApp/src/ui/: AnalyticsView.cpp  AnalyticsView.h  ClinicalVoiceNotesPanel.cpp  ClinicalVoiceNotesPanel.h  DashboardView.cpp  DashboardView.h  DigitalTwinView.cpp  DigitalTwinView.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  PatientManagementView.cpp  PatientManagementView.h  PreventiveView.cpp  PreventiveView.h  ScreeningView.cpp  ScreeningView.h  SettingsView.cpp  SettingsView.h  TelemedicineView.cpp  TelemedicineView.h  UiTheme.cpp  UiTheme.h
DesktopApp/src/ui/components/: DigitalTwinWidget.cpp  DigitalTwinWidget.h  ModernCard.cpp  ModernCard.h
DesktopApp/tests/: CommunicationProtocolTests.cpp  LoginInteractionTests.cpp  SmokeTests.cpp  UiInteractionTests.cpp
Documentation/: DependencyAudit.md  Phase1-EmbeddedFirmware.md  Phase2_Stability.md
Documentation/Phase2/: DesktopCommunicationBackbone.md
ESP32CAM/: .gitignore  ESP32CAM.ino  notes.txt  platformio.ini
ESP32CAM/assets/: README.md
ESP32CAM/data/: README.md
ESP32CAM/docs/: README.md
ESP32CAM/include/: CameraManager.h  Config.h  Logger.h  Secrets.example.h  StatusManager.h  StreamServer.h  Utilities.h  WiFiManager.h
ESP32CAM/lib/: README.md
ESP32CAM/src/: CameraManager.cpp  Logger.cpp  StatusManager.cpp  StreamServer.cpp  WiFiManager.cpp  main.cpp
docs/DeveloperNotes/: DesktopUIStability.md
docs/phase3/: CameraFallbackArchitecture.md  ClinicalVoiceNotes.md  EmergencyWorkflow.md  GitHubPagesDeployment.md  HardwareStateMachine.md  Phase3_Workflow.md  QR_Report_Workflow.md  SerialProtocol.md  TestingChecklist.md
docs/phase3/phase3_2/: Connections.md  DeveloperNotes.md  ESP32FlashGuide.md  HardwareArchitecture.md  NetworkConfiguration.md  PlatformIOBuildGuide.md  SoftwareArchitecture.md  Troubleshooting.md
